tests/fixtures/negative/comments/OutdatedDocumentation.kt
package comments

class Example {
    /**
     * Processes the input.
     * @param x the input value
     */
    fun process(x: Int): Int {
        return x * 2
    }
}
